# algotrendy

./: .gitignore  .replit  README.md  ai_orchestrator.py  api_documentation.md  architecture_design.md  dev-requirements.txt  implementation_roadmap.md  monitoring_observability.md  pyproject.toml  replit.md  requirements.txt  service_specifications.md  start_ai_api.py
ai_orchestrator/: redis.py
config/: .env.example
dev/: TODO.md  clean-empty-dirs.ps1
development/: DEVELOPMENT_PLAN.md  PRIORITY_ISSUES.md  README.md
docs/: CHANGELOG.md  DEMO.md  ICON_README.md  NEXT_STEPS.md  frontend.md  overview.md
examples/: __init__.py  ai_orchestrator_demo.py  alpaca_demo.py  alpaca_ml_demo.py  example_usage.py  real_alpaca_demo.py  setup_alpaca.py  simple_config.py  simple_demo.py  simple_trader.py  test_alpaca.py  test_system.py  working_demo.py  xgboost_trader.py
frontend/: app.py  simple_backend.py
isolated_tests/: README.md  test_core_imports.py  test_frontend_smoke.py
retool/: README.md  ai_orchestrator_dashboard.json
scripts/: check_frontend_proxy.py  quick_qc_test.py
src/: advanced_ml_trainer.py  ai_crypto_strategy_agent.py  ai_futures_strategy_agent.py  ai_indicator_agent.py  ai_interface.py  ai_orchestrator.py  ai_orchestrator_api.py  alpaca_integration.py  automated_futures_trader.py  backtester.py  config.py  crypto_scalping_trader.py  data_manager.py  futures_contract_rolling.py  main.py  market_replay.py  quantconnect_integration.py  requirements.txt  test_ai_interface.py  test_ai_orchestrator.py  trading_interface.py
tests/: conftest.py  (+3 more)
(+49 files in other folders)
