[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
    "aiohttp>=3.12.15",
    "anthropic>=0.68.1",
    "catboost>=1.2.8",
    "ccxt>=4.5.6",
    "fastapi>=0.117.1",
    "jinja2>=3.1.6",
    "joblib>=1.5.2",
    "lightgbm>=4.6.0",
    "matplotlib>=3.10.6",
    "numpy>=2.3.3",
    "openai>=1.109.1",
    "pandas>=2.3.2",
    "prometheus-client>=0.23.1",
    "pydantic>=2.11.9",
    "pygithub>=2.8.1",
    "pytest>=8.4.2",
    "pytest-asyncio>=1.2.0",
    "python-binance>=1.0.29",
    "python-dotenv>=1.1.1",
    "python-multipart>=0.0.20",
    "redis>=6.4.0",
    "requests>=2.32.5",
    "scikit-learn>=1.7.2",
    "scipy>=1.16.2",
    "seaborn>=0.13.2",
    "ta>=0.11.0",
    "uvicorn[standard]>=0.37.0",
    "websocket-client>=1.8.0",
    "xgboost>=3.0.5",
    "yfinance>=0.2.66",
]

[tool.pytest.ini_options]
pythonpath = ["src"]

